--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
 </head>
 <body>
     <header class="cabecalho">
+
+        <div>
         <img src="logo2A.svg" alt="logo da turma do segunda ano A" class="cabecalho__imagem">
         <p class="cabecalho__texto"> Segundo Ano A</p>
-        <ul class="cabecalho__menu">
+    <span class="cabecalho__menu-hamburguer"></span>
+     </div>
+       <div>
+  <ul class="cabecalho__menu">
             <li class="cabecalho_menu-item">Categorias</li>
             <li class="cabecalho_menu-item">Favoritos</li>
             <li class="cabecalho_menu-item">Minhas Séries</li> 
         </ul>
           <p class="cabecalho__texto2">Meu perfil</p>
+        </div>
     </header>
     <main class="principal">
 
